# multi-agent-system

./: .env.example  .gitignore  README.md  USAGE.md  pyproject.toml  test_project_prompt.md
docs/: AGENT_IDENTITIES.md
examples/: agent_model_config_demo.py  todo_app_demo.py
src/multi_agent/: __init__.py  cli.py  config.py
src/multi_agent/advisor/: __init__.py  committee.py
src/multi_agent/agents/: __init__.py  coordinator.py  prompts.py  sub_agents.py
src/multi_agent/codegen/: __init__.py  claude_cli.py  manager.py
src/multi_agent/core/: __init__.py  exceptions.py  system.py  types.py
src/multi_agent/llm/: __init__.py  agent.py  client.py
src/multi_agent/memory/: __init__.py  long_term.py  short_term.py
src/multi_agent/monitoring/: __init__.py  alert_manager.py  loop_detector.py  scope_monitor.py
src/multi_agent/permissions/: __init__.py  guard.py  temp_auth.py
src/multi_agent/recovery/: __init__.py  checkpoint.py  scanner.py  state.py  strategies.py
src/multi_agent/recovery/scanner/: __init__.py  context_summarizer.py  project_scanner.py
src/multi_agent/urap/: __init__.py
tests/: __init__.py  conftest.py  test_core_types.py  test_memory.py  test_model_config.py  test_monitoring.py  test_permissions.py  test_system.py
